force-app/main/default/objects/AccountTeamMember/fields/ATM_lookup__c.field-meta.xml
<CustomField>
    <fullName>ATM_lookup__c</fullName>
    <formula>IF(((Id  = NULL)&amp;&amp;(Contact__r.Host_Location__c == &apos;Sydney&apos;)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATM lookup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>