force-app/main/default/objects/AccountTeamMember/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Team</relationshipLabel>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>