force-app/main/default/objects/AccountTeamMember/fields/Host_Group__c.field-meta.xml
<CustomField>
    <fullName>Host_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Group</label>
    <referenceTo>Host_Group__c</referenceTo>
    <relationshipLabel>Account Team</relationshipLabel>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>