force-app/main/default/objects/AccountTeamMember/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <formula>$User.FirstName &amp; &quot; &quot; &amp;  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Name</label>
    <type>Text</type>
</CustomField>