force-app/main/default/objects/AccountTeamMember/fields/Update_Host_on_contact__c.field-meta.xml
<CustomField>
    <fullName>Update_Host_on_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Host on contact</label>
    <type>Checkbox</type>
</CustomField>