force-app/main/default/objects/AccountTeamMember/validationRules/ATM_Prevent_Create_and_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>ATM_Prevent_Create_and_Update</fullName>
    <active>true</active>
    <description>Users do not have access to Create or Update Account Team Members</description>
    <errorConditionFormula>IF($Profile.Name != &apos;Integration User&apos; &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;StarAPIUserforAzure&apos; &amp;&amp; $Permission.Skip_Validations_Permission = False, true, false)</errorConditionFormula>
    <errorMessage>You do not have access to Create or Update Account Team Members</errorMessage>
</ValidationRule>